--- a/frontend/src/css/navbar.css
+++ b/frontend/src/css/navbar.css
@@ -1,11 +1,3 @@
-/* NAVBAR */
-*{
-    margin: 0;
-    transition: all 0.2s;
-}
-body{
-    background-color: #DDDDDD;
-}
 header{
     height:100px;
     margin: 0 auto;
@@ -17,7 +9,7 @@ header{
     display: inline-flex;
 }
 .navitem{
-    padding: 15px;
+    padding: 0 15px;
     margin: auto 0;
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
@@ -42,23 +34,3 @@ header{
     padding-right: 20px;
 }
 
-/* CARD VIEW */
-
-.card{
-    padding: 10px;
-    width: fit-content;
-    margin : 0 auto;
-    vertical-align: middle;
-    background-color: #F2F2F2;
-    border-radius:5px;
-    margin-top: 10px;
-    box-shadow: 0px 5px 5px grey
-}
-.card .nameAndProfile{
-    display: inline-flex;
-}
-.card .nameAndProfile span{
-    margin: auto 0;
-    padding-left: 10px;
-    box-shadow: 2px;
-}
