--- a/frontend/src/css/card.css
+++ b/frontend/src/css/card.css
@@ -8,7 +8,8 @@
     background-color: #F2F2F2;
     border-radius:5px;
     margin-top: 10px;
-    box-shadow: 0px 5px 5px grey
+    box-shadow: 0px 5px 5px grey;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;;
 }
 .card .nameAndProfile{
     display: inline-flex;
