--- a/frontend/src/css/card.css
+++ b/frontend/src/css/card.css
@@ -9,13 +9,26 @@
     border-radius:5px;
     margin-top: 10px;
     box-shadow: 0px 5px 5px grey;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width:400px;
+}
+.title h2{
+    text-align: center;
 }
 .card .nameAndProfile{
     display: inline-flex;
 }
 .card .nameAndProfile span{
+    color: black;
     margin: auto 0;
     padding-left: 10px;
     box-shadow: 2px;
+    font-size: 15px;
+}
+.cardBody{
+    font-size: 15px;
+    padding: 3px;
+}
+.votesAndComments{
+    color: black;
 }
