--- a/frontend/src/css/about.css
+++ b/frontend/src/css/about.css
@@ -1,6 +1,7 @@
 
 .heading1
 {
+
   font-size: 40px;
   color: #8ad89d;
   font-weight:500;
@@ -15,6 +16,7 @@
   border-radius:20px;
   margin:auto;
   padding-bottom:20px;
+  margin-top: 30px;
 }
 .heading-content
 {
