--- a/frontend/src/css/navbar.css
+++ b/frontend/src/css/navbar.css
@@ -1,7 +1,7 @@
 header{
     height:100px;
     margin: 0 auto;
-    background-color: #1ab188;
+    background-color: #78bfa6;
     display: flex;
     justify-content:space-between;
 }
@@ -11,8 +11,9 @@ header{
 .navitem{
     padding: 0 15px;
     margin: auto 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: bold;
+    font-family: 'Verdana', Geneva, Tahoma, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
 }
 .navitem a{
     color: #fff;
@@ -21,7 +22,7 @@ header{
     transition: color 0.3s;
 }
 .navitem a:hover{
-    color: black;
+    color: navy;
 }
 .logo{
     padding: 0;
