--- a/frontend/src/css/profile.css
+++ b/frontend/src/css/profile.css
@@ -60,7 +60,7 @@
   margin-top: .3em;
   height: 6.23em;
   width: 6.23em;
-  border-radius: 50%;
+  border-radius: 18em;
 }
 
 .user-profile ul.data {
